product-carousel dragging overflow block height fix at order page

--- a/src/scss/pages/catalog/_catalog-item.scss
+++ b/src/scss/pages/catalog/_catalog-item.scss
@@ -1,20 +1,30 @@
-.product-carousel {
+body:not(.is-touch) .product-carousel {
 	.is-dragging {
-		@include when-inside("body:not(.is-touch)") {
-			.item {
-				background: $white !important;
-			}
+		.item {
+			background: $white !important;
+		}
 
-			.item__details {
-				max-height: 0 !important;
-				transition: max-height 0.1s ease !important;
-				// z-index: 12;
-			}
+		.item__details {
+			max-height: 0 !important;
+			transition: max-height 0.1s ease !important;
+			// z-index: 12;
+		}
 
-			.article,
-			.fav {
-				opacity: 0 !important;
-			}
+		.article,
+		.fav {
+			opacity: 0 !important;
+		}
+	}
+}
+
+body:not(.is-touch) .order .product-carousel {
+	.is-dragging {
+		.item {
+			background: transparent !important;
+		}
+
+		.item__details {
+			max-height: none !important;
 		}
 	}
 }
